@@ -6,7 +6,7 @@ project.version: @project.version@
 project.packaging: @project.packaging@
 
 spring.main.banner-mode: OFF
-spring.main.headless: false
+spring.main.headless: true
 spring.main.log-startup-info: false
 
 spring.output.ansi.enabled: NEVER
